--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   },
   "homepage": "https://github.com/codestates/Linkerbell-server#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "ibm-watson": "^5.6.0",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.11"
   },
   "devDependencies": {
+    "eslint": "^7.2.0",
     "sequelize-cli": "^5.5.1"
   }
 }
