--- a/package.json
+++ b/package.json
@@ -17,12 +17,24 @@
   },
   "homepage": "https://github.com/codestates/Linkerbell-server#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mysql2": "^2.1.0",
+    "react-native-crypto-js": "^1.0.0",
     "sequelize": "^5.21.11"
   },
   "devDependencies": {
+    "eslint": "^7.2.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-standard": "^4.0.1",
     "sequelize-cli": "^5.5.1"
   }
 }
