--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
   },
   "homepage": "https://github.com/codestates/Linkerbell-server#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "ibm-watson": "^5.6.0",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
     "express-session": "^1.17.1",
+    "ibm-watson": "^5.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.1.0",
     "react-native-crypto-js": "^1.0.0",
     "sequelize": "^5.21.11"
