--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.17.1",
     "ibm-watson": "^5.6.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "react-native-crypto-js": "^1.0.0",
     "sequelize": "^5.21.11"
