--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "google-auth-library": "^6.0.1",
     "ibm-watson": "^5.6.0",
     "jsonwebtoken": "^8.5.1",
+    "meta-extractor": "^2.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.11"
