--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/codestates/Linkerbell-server#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
@@ -30,6 +31,7 @@
     "meta-extractor": "^2.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
+    "puppeteer-core": "^3.3.0",
     "sequelize": "^5.21.11"
   },
   "devDependencies": {
