--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "express-session": "^1.17.1",
     "google-auth-library": "^6.0.1",
     "ibm-watson": "^5.6.0",
+    "iconv-lite": "^0.6.0",
+    "jschardet": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
     "meta-extractor": "^2.0.0",
     "morgan": "^1.10.0",
