:zap: Fix link controller to load open graph tag
Fix link controller to load open graph tag

--- a/package.json
+++ b/package.json
@@ -20,18 +20,25 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "charset": "^1.0.1",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "fb": "^2.0.0",
     "google-auth-library": "^6.0.1",
+    "got": "^11.3.0",
     "ibm-watson": "^5.6.0",
     "iconv-lite": "^0.6.0",
     "jschardet": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
     "meta-extractor": "^2.0.0",
+    "metascraper": "^5.12.6",
+    "metascraper-description": "^5.11.21",
+    "metascraper-image": "^5.11.21",
+    "metascraper-title": "^5.11.21",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "puppeteer": "^4.0.0",
