--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "charset": "^1.0.1",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -36,6 +37,8 @@
     "mysql2": "^2.1.0",
     "puppeteer": "^4.0.0",
     "puppeteer-core": "^3.3.0",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.8",
     "sequelize": "^5.21.11"
   },
   "devDependencies": {
