--- a/package.json
+++ b/package.json
@@ -29,20 +29,17 @@
     "express-session": "^1.17.1",
     "fb": "^2.0.0",
     "google-auth-library": "^6.0.1",
-    "got": "^11.3.0",
     "ibm-watson": "^5.6.0",
     "iconv-lite": "^0.6.0",
     "jschardet": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
-    "meta-extractor": "^2.0.0",
     "metascraper": "^5.12.6",
     "metascraper-description": "^5.11.21",
     "metascraper-image": "^5.11.21",
     "metascraper-title": "^5.11.21",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
-    "puppeteer": "^4.0.0",
-    "puppeteer-core": "^3.3.0",
+    "nodemailer": "^6.4.10",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.8",
     "sequelize": "^5.21.11",
