--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "fb": "^2.0.0",
     "google-auth-library": "^6.0.1",
+    "helmet": "^3.23.3",
     "ibm-watson": "^5.6.0",
     "iconv-lite": "^0.6.0",
     "jsonwebtoken": "^8.5.1",
