--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.10",
     "request": "^2.88.2",
-    "request-promise-native": "^1.0.8",
+    "request-promise": "^4.2.6",
     "sequelize": "^5.21.11",
     "sql-injection": "0.0.6",
     "xss": "^1.0.7"
